<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="?actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNama"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/namawarung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNama"
                android:maxLines="1"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/notelphp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNoTelp"
                android:maxLines="1"
                android:lines="1"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/namapemilik"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNamaPemilik"
                android:maxLines="1"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false"
            android:visibility="gone"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconDrawable="@drawable/ic_arrow_right"
            app:endIconMode="custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hastaprimasolusi.rana.utils.customui.CustomSearchAble
                android:id="@+id/etProvinsi"
                android:hint="@string/provinsi"
                android:paddingVertical="@dimen/_15sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false"
            android:visibility="gone"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconDrawable="@drawable/ic_arrow_right"
            app:endIconMode="custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hastaprimasolusi.rana.utils.customui.CustomSearchAble
                android:id="@+id/etKotaKab"
                android:hint="@string/kotakab"
                android:paddingVertical="@dimen/_15sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false"
            android:visibility="gone"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconDrawable="@drawable/ic_arrow_right"
            app:endIconMode="custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hastaprimasolusi.rana.utils.customui.CustomSearchAble
                android:id="@+id/etKecamatan"
                android:hint="@string/kecamatan"
                android:paddingVertical="@dimen/_15sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false"
            android:visibility="gone"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconDrawable="@drawable/ic_arrow_right"
            app:endIconMode="custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hastaprimasolusi.rana.utils.customui.CustomSearchAble
                android:id="@+id/etDesaKel"
                android:hint="@string/desakel"
                android:paddingVertical="@dimen/_15sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/alamat"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlamat"
                android:maxLines="1"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/btnUbah"
            android:text="@string/ubah"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />

    </LinearLayout>

</ScrollView>