<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/_20sdp"
    android:background="@drawable/bg_rounded_white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtPilih"
        android:text="@string/ambilgambar"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/txtPilih"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btnCamera"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/ic_camera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp" />

            <TextView
                android:text="@string/camera"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnGallery"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/ic_gallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp" />

            <TextView
                android:text="@string/gallery"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>